app_storefront_core/cartridge/static/default/css/style.css
/* ... */
.swatch-blue a{background-color:blue !important;}
.swatch-purple a{background-color:purple !important;}
.swatch-red a{background-color:red !important;}
.swatch-brown a{background-color:#783201 !important;}
.swatch-green a{background-color:green !important;}
.swatch-grey a{background-color:#8F979D !important;}
.swatch-pink a{background-color:#FE249A !important;}
.swatch-orange a{background-color:orange !important;}
.swatch-white a{background-color:#FFFFFF !important;}
.swatch-yellow a{background-color:#FFFF00 !important;}
.swatch-navy a{background-color:navy !important;}
.swatch-miscellaneous a{background:url("../images/interface/icon-color-swatch-misc.png") no-repeat scroll left top transparent;}
.unselectable.swatch-miscellaneous a{background:url("../images/interface/icon-color-swatch-misc-unselectable.png") no-repeat scroll left top transparent !important;}

/* product tiles */
/* ------------------------------------- */

.product-tile{color:#999999;padding-bottom:35px;position:relative;text-align:center;}
.product-tile img{max-width:100%;}
.product-tile .product-image{height:195px;position:relative;}
.product-tile .product-name{font-family:Georgia,sans-serif;font-size:1.2em;font-style:italic;margin:13px 0 2px;}
.product-tile .product-name h2{font-size:1.1em !important;font-weight:normal;margin-bottom:5px;}
.product-tile .product-pricing .product-standard-price{text-decoration:line-through;}
.product-tile .product-swatches{bottom:-9px;position:absolute;right:0;}
.product-tile .product-swatches-all{cursor:pointer;font-size:0.9em;}
.product-tile .product-swatches ul{list-style:none outside none;margin:0;overflow:hidden;padding:0;}
.product-tile .product-swatches ul.swatch-toggle{background:none repeat scroll 0 0 #FFFFFF;display:none;position:absolute;}
.product-tile .product-swatches:hover ul.swatch-toggle{display:block;}
.product-tile .product-swatches {float:right;}
.product-tile .product-swatches li{float:left;}
.product-tile .product-swatches .swatch{display:block;width:16px;}
.product-tile .product-swatches .swatch img{border:1px solid #FFFFFF;height:12px;padding:1px;width:12px;}
.product-tile .product-swatches .selected img{border-color:#12ABE7;}
.product-tile .product-swatches img:hover{border-color:#12ABE7;}
.product-tile .product-promo{font-size:0.8em;margin:6px 0;text-transform:uppercase;}
.product-tile .product-compare{bottom:-5px;left:5px;position:absolute;width:40px;line-height:11px;}
.product-tile .product-compare label{float:right;font-weight:400;padding:0;width:50%;}
.product-tile .product-compare input{float:left;margin:0;}
.product-tile .pr_stars{height:auto;position:relative;left:8px;}
.product-tile .prSnippetTitle {float:left;}
.product-tile .prSnippetRatingUnclickable {float:left;}
.product-tile .prSnippetNumberOfRatingsText {display:none;}
.product-tile .pr-snippet-review-count{display:none;}
.product-tile .pr-snippet-read-write{display:none;}
.product-tile .pr-snippet-social-bar{display:none;}
.product-tile .pr-clear{display:none;}
.product-tile .pr-snippet-stars{float:none;margin:0 auto;width:115px;}
.capture-product-id{left:-999em;position:absolute;}

/* search results, grid layout */
/* ------------------------------------- */

.pt_product-search-result .primary-content{background:none repeat scroll 0 0 #EFEFEF;}
.pt_content-search-result .primary-content{background:none repeat scroll 0 0 #EFEFEF;}
.pt_product-search-result .primary-content h1.content-header{padding-left:15px;}
.category-main-banner img{max-width:100%;}
.no-hits-search-term{color:#990000;font-style:italic;}
.no-hits-search-term-suggest{color:#990000;font-style:italic;}
.no-hits-footer{background:url("../images/interface/icon-double-line-header.png") repeat-x scroll left top transparent;margin:20px 0;padding:20px 0;}
.search-result-bookmarks{margin:15px;}
.search-result-bookmarks .first{border-right:1px solid #999999;padding-right:5px;}
.search-result-options{margin:17px 0 21px;overflow:hidden;width:100%;}
.sort-by{background:none repeat scroll 0 0 #D9D9D9;border-bottom:1px solid #C2C2C2;float:left;margin:0 0 0 20px;padding:3px 5px;}
.items-per-page{background:none repeat scroll 0 0 #D9D9D9;border-bottom:1px solid #C2C2C2;float:left;margin:0 0 0 20px;padding:3px 5px;}
.sort-by label{display:none;}
.items-per-page label{display:none;}
.sort-by select{background:none repeat scroll 0 0 #D9D9D9;border:0 none;font-size:0.9em;margin:0 6px 0 0;padding:0;width:auto;}
.items-per-page select{background:none repeat scroll 0 0 #D9D9D9;border:0 none;font-size:0.9em;margin:0 6px 0 0;padding:0;width:auto;}
.sort-by button{background:none repeat scroll 0 0 #C2C2C2;border:0 none;color:#333333;font-size:0.9em;padding:0.3em;width:auto;}
.items-per-page button{background:none repeat scroll 0 0 #C2C2C2;border:0 none;color:#333333;font-size:0.9em;padding:0.3em;width:auto;}
.pagination .results-hits{color:#666666;float:left;padding:5px 0;}
.pagination{float:right;margin:0 20px 0 0;}
.pagination ul{float:right;margin:0;padding:0;}
.pagination li{display:block;float:left;list-style:none outside none;padding:0.5em;}
.pagination li.first-last a{background-color:#00A4E3;color:#FFFFFF;font-size:0.9em;padding:0 2px;}
ul.search-result-items{margin:0;padding:0;}
ul.search-result-items li{list-style:none outside none;}
ul.search-result-items .new-row{clear:both;}
ul.search-result-items .grid-tile{background:none repeat scroll 0 0 #FFFFFF;box-shadow:0 0 9px #CCCCCC;float:left;list-style:none outside none;margin:0 0 2% 20px;padding:2%;width:26%;}
ul.search-result-items .invisible{display:none;}
.search-result-content{clear:both;}
.search-promo{padding:20px;}
h1#results-content{background:url("../images/interface/icon-double-line-header.png") repeat-x scroll left top transparent;padding-top:30px;}
ul.folder-content-list{margin:0;overflow:hidden;padding:0 20px;}
ul.folder-content-list li{float:left;list-style:none outside none;margin:0;padding:2% 2% 2% 0;width:48%;}
ul.folder-content-list .content-title{display:block;}
/* ... */

